<resources>
    <string name="app_name">Talk To Me</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="phone_number">Phone number</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="register_a_new_account">Register a new account</string>
    <string name="register">Register</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="verification_msg">A message with your verification code has been sent to the number entered,
        this should take about a minute. This process should be automatic,
        if the app does not add the code automatically, please add it manually.</string>
    <string name="verify">Verify</string>
    <string name="enter_your_code_here">Enter your code here</string>
    <string name="phone_number_error">Please enter a valid phone number</string>
    <string name="code_error">Please enter a valid code</string>
    <string name="log_out">Log Out</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="send_img">Send Image</string>
    <string name="send_msg">Send Message</string>
    <string name="message">Message</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="show_contact">Show Contact</string>
    <string name="loading_contacts">Loading Contacts…</string>
    <string name="loading_chats">Loading Chats…</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="img_msg_display">Image</string>
    <string name="go_back">Go Back</string>
    <string name="add_caption_to_picture">Add Caption To Picture</string>
    <string name="pick_img">Pick Image</string>
    <string name="my_profile">My Profile</string>
    <string name="change_image">Change Image</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="hi_there_talk_to_me">Hi there! Talk To Me!</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="empty_status_error">Status can\'t be empty</string>
    <string name="long_status_error">Status is too long</string>
    <string name="chat_options">Chat Options</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="options">Options</string>
    <string name="delete_chat_this_cannot_be_undone">Delete chat? This cannot be undone!</string>
    <string name="cancel">Cancel</string>
    <string name="no_camera_on_device">This feature requires a camera</string>
    <string name="storage_permission_rational">Access to external storage is necessary to access gallery.</string>
    <string name="add_contact">Add As Contact</string>
    <string name="image">Image</string>
    <string name="media_gallery">Media Gallery</string>
    <string name="image_selected">Image Selected</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="img_selection_options_txt">%1d images selected</string>
    <string name="delete">Delete</string>
    <string name="delete_images_title">Delete %1d images? Are you sure?</string>
    <string name="delete_messages_title">Delete %1d messages? Are you sure?</string>
    <string name="msg_selection_options_txt">%1d messages selected</string>
</resources>
