<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Contact Name"
            app:menu="@menu/chat_menu"
            app:navigationIcon="@drawable/ic_arrow_back_white"
            app:navigationContentDescription="@string/go_back"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/msg_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_container"
        app:layout_constraintBottom_toTopOf="@id/selection_options"
        android:layout_margin="4dp" />

    <LinearLayout
        android:id="@+id/selection_options"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@id/msg_et"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/selected_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            tools:text="2 images selected"
            android:gravity="center_vertical"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="#fff"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <ImageButton
            android:id="@+id/delete_selected_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_delete_white"
            android:contentDescription="@string/delete_selected"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/cancel_selection_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/cancel_selection"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/msg_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_image"
        app:startIconContentDescription="@string/send_img"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_send"
        app:endIconContentDescription="@string/send_msg"
        android:hint="@string/message"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>