<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_bottom_sheet_heading"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:text="@string/options"
        android:textColor="@color/grey"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_btn_delete_chat"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/ic_delete"
        android:gravity="start|center_vertical"
        android:text="@string/delete_chat"
        android:textColor="#ff0000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/delete_conformation_tv"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/delete_chat_this_cannot_be_undone"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:visibility="gone">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/delete_chat"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>