<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GalleryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/media_gallery"
            app:navigationIcon="@drawable/ic_arrow_back_white"
            app:navigationContentDescription="@string/go_back"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_container"
        app:layout_constraintVertical_bias="1.0"
        app:spanCount="2"
        tools:layout_editor_absoluteX="-16dp"
        tools:listitem="@layout/gallery_item_layout" />

    <LinearLayout
        android:id="@+id/selection_options"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/selected_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            tools:text="2 images selected"
            android:gravity="center_vertical"
            android:textStyle="italic"
            android:textSize="20sp"
            android:textColor="#fff"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <ImageButton
            android:id="@+id/delete_selected_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_delete_white"
            android:contentDescription="@string/delete_selected"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <ImageButton
            android:id="@+id/cancel_selection_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/cancel_selection"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>